--- a/sass/_breakpoints.scss
+++ b/sass/_breakpoints.scss
@@ -19,6 +19,16 @@
     body{
         overflow: overlay;
     }
+    body::-webkit-scrollbar {
+        width: 8px;
+      }
+    
+    body::-webkit-scrollbar-thumb {
+    background-color: rgb(119, 119, 119);
+    @include border-radius(50px, 50px);
+    padding-right: 1px;
+    }
+    
 }
 @media screen and (max-width: 1400px){
     .caro-img{
@@ -30,10 +40,28 @@
     @include profilePic-md;
     @include carousel-md;
     @include navbar-md;
+    body::-webkit-scrollbar {
+        width: 8px;
+      }
+    
+    body::-webkit-scrollbar-thumb {
+    background-color: rgb(119, 119, 119);
+    @include border-radius(50px, 50px);
+    padding-right: 1px;
+    }
 }
 @media screen and (max-width: 650px){
     @include timeline-sm;
     @include profilePic-sm;
     @include carousel-sm;
     @include carousel-container-sm;
+    body::-webkit-scrollbar {
+        width: 0;
+      }
+    
+    body::-webkit-scrollbar-thumb {
+        background-color: rgb(119, 119, 119);
+        @include border-radius(0px, 0px);
+        padding-right: 0;
+    }
 }
